[project]
name = "comfyui-prompt-extranetworks"
description = "Instead of LoraLoader or HypernetworkLoader, it receives a prompt and loads and applies LoRA or HN based on the specifications within the prompt. The main purpose of this custom node is to allow changes without reconnecting the LoraLoader node when the prompt is randomly altered, etc."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Taremin/comfyui-prompt-extranetworks"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-prompt-extranetworks"
Icon = ""
